src/objects/Project_Cost__c.object
<CustomObject>
    <description>For recording project cost. Initially created for SEO Project.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>10</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>SFDC_Projects__c</referenceTo>
        <relationshipLabel>Project Costs</relationshipLabel>
        <relationshipName>Project_Costs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Link Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Content</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Project Cost</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Project Cost ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Costs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>